@@ -6,6 +6,9 @@ Changes since 0.2.1
    for the version number to track the changes.txt file.
 4. Added some documentation for babelfish, and moved some code from
    the translate demo into babelfish.sl (Manfred Hanke).
+5. src/curl-module.c: Added a couple comments on the use of
+   CURLOPT_PRIVATE by the module, and fixed a pointer related warning
+   pertaining to its use.
 
 Changes since 0.2.0
 1. src/curl-module.c: removed "ifdef"s from the code and replaced them
